Mon Aug  6 19:58:43 2001  Christopher Faylor <cgf@cygnus.com>

	* cygheap.cc (cygheap_root::set): Avoid treating '/' specially.

	* fhandler.cc (fhandler_base::fcntl): Only set specific O_NDELAY style
	flag passed in from application.
	* fhandler_socket.cc (fhandler_socket::fcntl): Ditto.
	* fhandler.h: Set constant for future use.
	* winsup.h: Define OLD_O_NDELAY only for old programs.
	* include/cygwin/version.h: Define
	CYGWIN_VERSION_CHECK_FOR_OLD_O_NONBLOCK.

Sat Aug  4 16:52:03 2001  Christopher Faylor <cgf@cygnus.com>

	Throughout, change check for running under Windows NT to 'iswinnt'.
	* dcrt0.cc (set_os_type): Set 'iswinnt' appropriately.
	* cygheap.cc (init_cheap): Revert to using VirtualAlloc for allocating
	cygheap.
	(cygheap_setup_for_child_cleanup): New function.  Standard function to
	call after calling CreateProcess to cleanup cygheap info passed to
	child.
	(cygheap_fixup_in_child): Copy cygheap from shared memory into
	allocated space under Windows 9x or if can't relocate shared space
	under NT.
	* cygheap.h: Declare new function.
	* spawn.cc (spawn_guts): Use cygheap_fixup_in_child.
	* fork.cc (fork_parent): Ditto.
	* winsup.h: Declare iswinnt.

2001-08-04  Egor Duda  <deo@logos-m.ru>

	* dtable.cc (dtable::release): Avoid messing with console when
	closing socket.

Fri Aug  3 14:02:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_accept): Allow NULL peer and len parameters.
	* include/cygwin/socket.h: Define socklen_t as int.

Fri Aug  3 13:04:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (fchdir): Set the fhandler's path to absolute value to
	ensure changing to the correct directory even if the fhandler originally
	points to a relative path.

Thu Aug  2 17:59:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* security.cc (set_file_attribute): Clean up. Don't call
	`set_nt_attribute' when ntsec isn't set.

Sat Jul 28 22:30:55 2001  Christopher Faylor <cgf@cygnus.com>
